--- a/HibernatePrime/src/main/webapp/index.xhtml
+++ b/HibernatePrime/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="/lib/js/bootstrap.min.js">
 </script>
 <form action="Servlet" method="POST">
-<button type="submit" class="btn btn-dark">Lister les contacts</button>
+<button type="submit" class="btn btn-dark">Exporter les Fichier .vcard</button>
 </form>
 
 <h:form>
@@ -24,5 +24,8 @@
 	</p:panelGrid>
 	<p:commandButton value="Register" action="#{registerContact.register}" update="messages"></p:commandButton>
 </h:form>
+<br />
+
+
 
 </html>
